--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,9 +7,9 @@ hero:
   image:
     file: ../../assets/Screaming_Jake.jpg
   actions:
-    - text: Example Guide
-      link: /guides/example/
-      icon: right-arrow
+    - text: MyNotes
+      link: /guides/Notes/
+      icon: Bear
       variant: primary
     - text: Read the Starlight docs
       link: https://starlight.astro.build
