--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,9 +3,7 @@ title: Welcome to Starlight
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/Screaming_Jake.jpg
+  tagline: Now, You've entered teddy Territory
   actions:
     - text: MyNotes
       link: /guides/Notes/
