changes home page

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,13 +1,14 @@
 ---
+
 title: Welcome to Starlight
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
-  tagline: Now, You've entered teddy Territory
+  tagline: you've just entered Teddy territory 🐻🐻🐻
   actions:
-    - text: MyNotes
+    - text: Notes🍦🌸
       link: /guides/Notes/
-      icon: Bear
+      icon: right-arrow
       variant: primary
     - text: Read the Starlight docs
       link: https://starlight.astro.build
