fix home page redirection

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   tagline: you've just entered Teddy territory 🐻🐻🐻
   actions:
     - text: Notes🍦🌸
-      link: /notes/example/
+      link: /notes/overview/
       icon: right-arrow
       variant: primary
     - text: Read the Starlight docs
